[workspace]
resolver = "2"

members = [
    "cas_client",
    "cas_object",
    "cas_types",
    "chunk_cache",
    "xet_config",
    "data",
    "deduplication",
    "error_printer",
    "file_reconstruction",
    "file_utils",
    "git_xet",
    "hub_client",
    "mdb_shard",
    "merklehash",
    "progress_tracking",
    "utils",
    "xet_logging",
    "xet_runtime",
]

exclude = ["chunk_cache_bench", "hf_xet", "hf_xet_wasm", "hf_xet_thin_wasm"]

[profile.release]
opt-level = 3
lto = true
debug = 1

[profile.opt-test]
inherits = "dev"
opt-level = 3
debug = 1

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
bincode = "1.3"
bitflags = { version = "2.9", features = ["serde"] }
blake3 = "1.5"
bytes = "1.8"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
colored = "2"
console-subscriber = "0.5"
countio = { version = "0.2", features = ["futures"] }
crc32fast = "1.4"
csv = "1"
ctor = "0.4"
derivative = "2.2"
dirs = "6.0"
duration-str = "0.17"
futures = "0.3"
futures-util = "0.3"
gearhash = "0.1"
getrandom = "0.3"
git-url-parse = "0.4"
git-version = "0.3"
git2 = "0.20"
half = "2.4"
heapify = "0.2"
heed = "0.11"
http = "1"
hyper = "1.7"
hyper-util = "0.1"
itertools = "0.14"
lazy_static = "1.5"
libc = "0.2"
lz4_flex = "0.11"
mockall = "0.13"
more-asserts = "0.3"
once_cell = "1.20"
oneshot = "0.1"
paste = "1.0"
pin-project = "1"
prometheus = "0.14"
rand = "0.9"
rand_chacha = "0.9"
rangemap = "1.7"
regex = "1"
reqwest = { version = "0.12", features = [
    "json",
    "stream",
    "system-proxy",
    "socks",
], default-features = false }
reqwest-middleware = "0.4"
reqwest-retry = "0.7"
rust-netrc = "0.1"
safe-transmute = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
sha2 = "0.10"
shell-words = "1.1"
shellexpand = "3.1"
static_assertions = "1.1"
statrs = "0.16"
sysinfo = "0.37"
tempfile = "3.20"
thiserror = "2.0"
tokio = { version = "1.47" }
tokio-retry = "0.3"
tokio-util = { version = "0.7" }
tower-service = "0.3"
tracing = "0.1"
tracing-appender = "0.2"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
ulid = "1.2"
url = "2.5"
urlencoding = "2.1"
uuid = "1"
walkdir = "2"
warp = "0.3"
web-time = "1.1"
whoami = "1"

# windows
winapi = { version = "0.3", features = [
    "winerror",
    "winnt",
    "handleapi",
    "processthreadsapi",
    "securitybaseapi",
] }

# dev-deps
approx = "0.5"
httpmock = "0.7"
rand_core = "0.6"
rand_distr = "0.5"
russh = "0.55"
serial_test = "3"
tempdir = "0.3"
tracing-test = { version = "0.2", features = ["no-env-filter"] }
wiremock = "0.6"
