[package]
name = "data"
version = "0.14.5"
edition = "2024"

[lib]
doctest = false

[[bin]]
name = "x"
path = "src/bin/example.rs"

[[bin]]
name = "xtool"
path = "src/bin/xtool.rs"

[[example]]
name = "chunk"
path = "examples/chunk/main.rs"

[[example]]
name = "hash"
path = "examples/hash/main.rs"

[[example]]
name = "xorb-check"
path = "examples/xorb-check/main.rs"

[dependencies]
cas_client = { path = "../cas_client" }
cas_object = { path = "../cas_object" }
file_reconstruction = { path = "../file_reconstruction" }
cas_types = { path = "../cas_types" }
deduplication = { path = "../deduplication" }
error_printer = { path = "../error_printer" }
hub_client = { path = "../hub_client" }
mdb_shard = { path = "../mdb_shard" }
merklehash = { path = "../merklehash" }
progress_tracking = { path = "../progress_tracking" }
utils = { path = "../utils" }
xet_runtime = { path = "../xet_runtime" }

anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
lazy_static = { workspace = true }
more-asserts = { workspace = true }
prometheus = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "rt"] }
tracing = { workspace = true }
ulid = { workspace = true }
walkdir = { workspace = true }

# Windows doesn't support assembly for compilation
[target.'cfg(not(target_os = "windows"))'.dependencies]
sha2 = { workspace = true, features = ["asm"] }

[target.'cfg(target_os = "windows")'.dependencies]
sha2 = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
tracing-test = { workspace = true }
ctor = { workspace = true }
dirs = { workspace = true }

[features]
strict = []
expensive_tests = []
